# pystiller

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: codecov.yml  mkdocs.yml
docs/: guide.md
guide/: index.html
search/: search_index.json
src/pystiller/: __init__.py  client.py
src/pystiller/_core/: _authentication.py  _datarama.py  _projects.py
src/pystiller/_utils/: _checks.py  _data.py  _env.py  _requests.py
tests/: test__authentication.py  test__checks.py  test__data.py  test__datarama.py  test__env.py  test__projects.py  test__requests.py  test_client.py
